# roverrobotics_ros2

./: README.md  setup_installation.md
install_scripts/: setup_rover.sh
install_scripts.sh/: install_driver.sh
install_scripts/udev/: 55-roverrobotics.rules  readme.txt
roverrobotics_bringup/: CMakeLists.txt  package.xml
roverrobotics_description/: CMakeLists.txt  package.xml
roverrobotics_description/launch/: display_4wd_rover.launch.py  display_flipper.launch.py  display_indoor_miti.launch.py  display_indoor_miti_payload.launch.py  display_max.launch.py  display_mega.launch.py  display_mini.launch.py  display_mini_2wd.launch.py  display_mini_payload.launch.py  display_miti.launch.py  display_miti65.launch.py  display_miti_65.launch.py  display_miti_payload.launch.py  display_rover_2wd.launch.py
roverrobotics_description/meshes/: 65wheels.dae  castor.dae  castor_housing.dae  flipper_track.dae  hub_10in.dae  hub_10in.stl  hub_6.5in.dae  hub_6.5in.stl  max_wheels_10in.dae  max_wheels_13in.dae  max_wheels_15in.dae  mega_wheels.dae  pro_tire.dae  rplidar_s2.dae
roverrobotics_description/rviz/: urdf.rviz
roverrobotics_description/urdf/: flipper.urdf  indoor_miti.urdf  indoor_miti_payload.urdf  max.urdf  max_100.urdf  max_100_neo.urdf  max_130.urdf  max_130_neo.urdf  max_150.urdf  max_150_neo.urdf  max_65.urdf  mega.urdf  mini.urdf  mini_2wd.urdf  mini_payload.urdf  miti.urdf  miti_65.urdf  miti_neo.urdf  miti_payload.urdf  rover_2wd.urdf  rover_4wd.urdf
roverrobotics_description/urdf/accessories/: imu.urdf  mega_payload.urdf  miti_payload.urdf  rover_dev_payload.urdf  rplidar_s2.urdf
roverrobotics_driver/: CMakeLists.txt  package.xml
roverrobotics_driver/config/: accessories.yaml  controller_config.yaml  imu_filter_config.yaml  localization_ekf.yaml  localization_outdoor_ekf.yaml  max_100_config.yaml  max_130_config.yaml  max_150_config.yaml  max_65_config.yaml  max_config.yaml  mega_config.yaml  mini_2wd_config.yaml  mini_config.yaml  miti65_config.yaml  miti_65_config.yaml  miti_config.yaml  nav2_params.yaml  pro_config.yaml  ps4_controller_config_jp6.yaml  ps5_controller_config.yaml  ps5_controller_config_jp6.yaml  realsense_config.yaml  robot_template.yaml  route_server_params.yaml  topics.yaml  zero_config.yaml
roverrobotics_driver/config/rviz_configs/: nav2_default_view.rviz  realsense_rviz_layout.rviz  slam_rviz_layout.rviz
roverrobotics_driver/config/slam_configs/: mapper_params_localization.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml
roverrobotics_driver/include/: roverrobotics_ros2_driver.hpp
roverrobotics_driver/launch/: accessories.launch.py  indoor_miti.launch.py  indoor_miti_teleop.launch.py  max.launch.py  max_teleop.launch.py  mega.launch.py  mega_teleop.launch.py  mini.launch.py  mini_2wd.launch.py  mini_2wd_teleop.launch.py  mini_teleop.launch.py  miti.launch.py  miti65.launch.py  miti65_teleop.launch.py  miti_65.launch.py  miti_65_teleop.launch.py  miti_teleop.launch.py  nav2_backend.py  navigation_launch.py  outdoor_navigation_launch.py  pro.launch.py  pro_teleop.launch.py  ps4_controller.launch.py  ps5_controller.launch.py  robot_localizer.launch.py  robot_localizer_outdoor.launch.py  slam_launch.py  zero.launch.py  zero_teleop.launch.py
roverrobotics_driver/maps/: maze_map.pgm  maze_map.yaml
roverrobotics_driver/src/: roverrobotics_ros2_driver.cpp
roverrobotics_driver/udev/: 55-roverrobotics.rules
roverrobotics_gazebo/: CMakeLists.txt  package.xml
roverrobotics_gazebo/gui/: gui.config
roverrobotics_gazebo/launch/: 2wd_rover_gazebo.launch.py  4wd_rover_gazebo.launch.py  flipper_gazebo.launch.py  ignition.launch.py  indoor_miti_gazebo.launch.py  indoor_miti_gazebo.py  max_gazebo.launch.py  mega_gazebo.launch.py  mini_2wd_gazebo.launch.py  mini_gazebo.launch.py  mini_gazebo.py  miti65_gazebo.launch.py  miti_65_gazebo.launch.py  miti_gazebo.launch.py  miti_gazebo.py  ros_ign_bridge.launch.py
roverrobotics_gazebo/worlds/: maze.sdf
roverrobotics_gazebo_classic/: CMakeLists.txt  package.xml
roverrobotics_gazebo_classic/launch/: indoor_miti_gazebo.launch.py  mini_gazebo.launch.py  miti_gazebo.launch.py
roverrobotics_gz_sim/: CMakeLists.txt  package.xml
roverrobotics_gz_sim/launch/: indoor_miti_gz_sim.launch.py  mini_gz_sim.launch.py  miti_gz_sim.launch.py
roverrobotics_input_manager/: CMakeLists.txt  package.xml
roverrobotics_input_manager/scripts/: joys_manager.py
roverrobotics_input_manager/scripts/modules/: Controller.py  Topics.py
